customised theme for my site

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 # config
-logo: /images/svdb.png
-keywords: "sjaak van den berg, svdb, bitcoin, crypto, payment, integration, bitcoins, wordpress, betaling, webshop, front end, design, ontwerp, developer"
-pubkey: 13DB CAA1 2633 81A7
+logo: /images/avatar.png
+keywords: "laurence stant, developer, engineer, electronics, physics, microwave, radio"
+pubkey:
 menu:
   Home: /
   Articles: /articles
   About: /about
+  Tools: /tools
 
 # Content
 excerpt_link: Read more
